# archie

./: .gitignore  Dockerfile  Makefile  README.md  env.example  manage.py  pyproject.toml  scan_documents.py  test_llm.py
archie/: asgi.py  settings.py  urls.py  views.py  wsgi.py
archie/documents/: admin.py  apps.py  forms.py  models.py  tools.py  urls.py  views.py
archie/documents/migrations/: 0001_initial.py  0002_alter_document_category_alter_document_scan_and_more.py  0003_document_organization.py
archie/documents/templatetags/: __init__.py  document_filters.py
archie/documents/tests/: __init__.py  test_filters.py
archie/services/: __init__.py  llm_service.py
archie/tasks/: apps.py  forms.py  models.py  urls.py  views.py
archie/tasks/migrations/: 0001_initial.py  0002_scansession.py  0003_task_document_task_result_task_status_task_type_and_more.py
static/css/: styles.css
static/js/: scripts.js
templates/: base.html  index.html
templates/documents/: detail.html  edit.html  index.html  new.html  show.html
templates/tasks/: index.html  new.html  scan_create.html  scan_detail.html  scan_list.html  show.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
